--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,29 +1,97 @@
+/* style.css */
+
+/* Establish border-box as the basis for sizing (not content) */
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+} /* Inherit box-sizing to all elements including pseudo elements */
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
+}
+
+.page-wrap {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
 }
 
 .header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   height: 72px;
+  font-size: 32px;
+  font-weight: 900;
   background: darkmagenta;
   color: white;
+  padding: 0 1rem;
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  margin-top: auto;
 }
 
+.section-main {
+  display: flex;
+  flex: 1;
+}
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  color:#eee;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+ul.sidebar-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  margin: 0;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1 1 auto;
+  gap: 1rem;
+  padding: 1rem;
+  justify-content: center;
+  align-items: flex-start;
+  background: #f9f9f9;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  height: 200px;
+  padding: 1rem;
 }
